chore: rename underlying common-chatbot-ui module to common-chatbot

--- a/src/webview/index.html
+++ b/src/webview/index.html
@@ -20,6 +20,7 @@
             <div class="contentSection" id="googleContent">
                 <h1>Google Webview</h1>
                 <p>This webview knows that it's loaded in Google Assistant versus Facebook Messenger.</p>
+                <button id="googleCloseWebviewButton">Close Webview</button>
             </div>
         </div>
     </body>
